Updtaed Date Issue

--- a/covid19/src/index.html
+++ b/covid19/src/index.html
@@ -10,7 +10,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-</head>
+  <link rel="stylesheet" href="C:\Users\Dell\Desktop\covidtracker\covid19\node_modules\bootstrap-social">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
+ </head>
 <body>
   <app-root></app-root>
 </body>
